# Swift

./: HOW_TO_USE.md  README.md  START_HERE.txt  bot.py  dashboard.py  pyproject.toml  requirements.txt  run-dashboard.bat  run-dashboard.sh  run.bat  run.sh  setup.bat  setup.py  setup.sh
assets/: premium_emojis.json
src/: config.py  main.py  utils.py
src/admin_dashboard/: server.py
src/admin_dashboard/templates/: base.html  deposits.html  home.html  login.html  orders.html  products.html  users.html  withdrawals.html
src/db/: models.py  seed.py  session.py
src/handlers/: admin.py  deposit.py  profile.py  refer.py  shop.py  start.py  states.py  support.py
src/middleware/: banned.py  db.py  throttle.py
src/repositories/: deposits.py  orders.py  products.py  referrals.py  users.py  withdrawals.py
src/services/: referral.py  shop.py  wallet.py
src/ui/: editor.py  emoji.py  keyboards.py  texts.py
